--- a/WndDesign/WndDesign.vcxproj
+++ b/WndDesign/WndDesign.vcxproj
@@ -236,6 +236,7 @@
     <ClInclude Include="system\win32_aero_snap.h" />
     <ClInclude Include="system\win32_api.h" />
     <ClInclude Include="system\win32_ime.h" />
+    <ClInclude Include="widget\RadioGroup.h" />
     <ClInclude Include="widget\TitleBarFrame.h" />
     <ClInclude Include="widget\ScrollBox.h" />
     <ClInclude Include="window\Global.h" />
