--- a/WndDesign/WndDesign.vcxproj.filters
+++ b/WndDesign/WndDesign.vcxproj.filters
@@ -207,12 +207,6 @@
     <ClInclude Include="common\unicode_helper.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="control\Scrollbar.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="widget\ScrollBox.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="geometry\clamp.h">
       <Filter>Header Files</Filter>
     </ClInclude>
@@ -225,7 +219,7 @@
     <ClInclude Include="frame\FixedFrame.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="frame\MinMaxFrame.h">
+    <ClInclude Include="frame\MinFrame.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="widget\TitleBarFrame.h">
@@ -295,6 +289,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="widget\Tooltip.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="frame\MaxFrame.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
