--- a/WndDesign/WndDesign.vcxproj.filters
+++ b/WndDesign/WndDesign.vcxproj.filters
@@ -306,6 +306,9 @@
     <ClInclude Include="frame\WndFrameMutable.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="wrapper\Cursor.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="figure\desktop_layer.cpp">
