--- a/WndDesign/WndDesign.vcxproj
+++ b/WndDesign/WndDesign.vcxproj
@@ -208,6 +208,7 @@
     <ClInclude Include="layout\ListLayoutAuto.h" />
     <ClInclude Include="layout\OverlapLayout.h" />
     <ClInclude Include="layout\SplitLayout.h" />
+    <ClInclude Include="layout\StackLayout.h" />
     <ClInclude Include="layout\TableLayout.h" />
     <ClInclude Include="message\context.h" />
     <ClInclude Include="message\key_msg.h" />
