--- a/WndDesign/CMakeLists.txt
+++ b/WndDesign/CMakeLists.txt
@@ -1,7 +1,8 @@
-file(GLOB_RECURSE LIB_SOURCES CONFIGURE_DEPENDS
+file(GLOB_RECURSE LIB_SOURCES
     *.h
     *.cpp
 )
 
 add_library(WndDesign STATIC ${LIB_SOURCES})
-target_include_directories(WndDesign PUBLIC ${CMAKE_SOURCE_DIR})
+get_filename_component(PARENT_DIR "${CMAKE_CURRENT_SOURCE_DIR}" DIRECTORY)
+target_include_directories(WndDesign PUBLIC ${PARENT_DIR})
